space-invaders/kubernetes/space-invaders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: space-invaders-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: space-invaders
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
